--- a/index.html
+++ b/index.html
@@ -30,6 +30,64 @@
           <li> A margin indicates how much space we want around the outside of an element.</li>
           <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
+        <h3>Introduction to CSS</h3>
+<p>Definition: CSS (Cascading Style Sheets) is used to style HTML elements.
+Importance: Enhances the presentation of web pages.</p>
+        <ol>
+<li>>CSS Syntax
+Selector: Targets the HTML element to style.
+Property: The style attribute you want to change (e.g., color, font-size).
+Value: The setting for the property (e.g., red, 16px).
+Example:
+
+h1 {
+    color: blue;
+    font-size: 24px;
+}</li>
+<li>Selectors
+Type Selector: Selects elements by their tag name (e.g., div, p).
+Class Selector: Selects elements with a specific class (e.g., .classname).
+ID Selector: Selects a single element with a specific ID (e.g., #idname).
+Attribute Selector: Selects elements based on an attribute (e.g., [type="text"]). </li>
+<li>Box Model
+Content: The actual content of the box.
+Padding: Space between the content and the border.
+Border: The border surrounding the padding and content.
+Margin: Space outside the border. </li>
+<li>Positioning
+Static: Default positioning.
+Relative: Positioned relative to its normal position.
+Absolute: Positioned relative to its nearest positioned ancestor.
+Fixed: Positioned relative to the viewport.
+Sticky: Switches between relative and fixed based on scroll position. </li>
+<li>Flexbox
+A layout model that allows for responsive design.
+Key properties: display: flex;, justify-content, align-items, flex-direction. </li>
+<li>Grid
+A two-dimensional layout system.
+Key properties: display: grid;, grid-template-columns, grid-template-rows, grid-area. </li>
+<li>Responsive Design
+Use of media queries to adapt styles based on screen size.
+Example:
+@media (max-width: 600px) {
+    body {
+        background-color: lightblue;
+    }
+} </li>
+<li>CSS Variables
+Custom properties that can be reused throughout the stylesheet.
+Example:
+:root {
+    --main-color: blue;
+}
+body {
+    color: var(--main-color);
+} </li>
+<li>Best Practices
+Keep your CSS organized and modular.
+Use comments to explain complex sections.
+Avoid inline styles; use external stylesheets for maintainability. </li>
+        </ol>
       </section>
 
       <section class="card" id="git-section">
